# mesh_structure

./: CMakeLists.txt  README.md
include/mesh_structure/: TetrahedronMesh.h  TriangleMesh.h
src/: TetrahedronMesh.cpp  TriangleMesh.cpp
